--- a/sample/AspNetCore.Jwt.Sample/AspNetCore.Jwt.Sample.csproj
+++ b/sample/AspNetCore.Jwt.Sample/AspNetCore.Jwt.Sample.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
