created aspnetcore.jwt package and added extension method to configure jwt

--- a/sample/AspNetCore.Jwt.Sample/appsettings.json
+++ b/sample/AspNetCore.Jwt.Sample/appsettings.json
@@ -1,8 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DOTNET USER SECRET"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "TokenSigningKey": "DOTNET USER SECRET",
+    "Audience": "DOTNET USER SECRET",
+    "Issuer": "DOTNET USER SECRET"
+  }
 }
