--- a/sample/AspNetCore.Jwt.Sample/AspNetCore.Jwt.Sample.csproj
+++ b/sample/AspNetCore.Jwt.Sample/AspNetCore.Jwt.Sample.csproj
@@ -24,11 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityManagement.Data" Version="0.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.2" />
   </ItemGroup>
 
