--- a/src/AspNetCore.Jwt/AspNetCore.Jwt.csproj
+++ b/src/AspNetCore.Jwt/AspNetCore.Jwt.csproj
@@ -2,25 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Saji Weerasingham</Authors>
     <Company>NA</Company>
-    <Description>ASP.Net Core NuGet package to assist with JWT authentication/authorization for Web API when using Entity Framework Core Identity</Description>
+    <Description>ASP.Net Core package to assist with JWT authentication/authorization for Web API when using Entity Framework Core Identity</Description>
     <PackageProjectUrl>https://github.com/TheMagnificent11/aspnetcore-jwt</PackageProjectUrl>
     <RepositoryUrl>https://github.com/TheMagnificent11/aspnetcore-jwt</RepositoryUrl>
     <PackageTags>aspnetcore efcore identity jwt</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.0\Web.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp2.0\AspNetCore.Jwt.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <CodeAnalysisRuleSet>..\..\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netcoreapp2.0\Web.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.0\AspNetCore.Jwt.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <CodeAnalysisRuleSet>..\..\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
@@ -29,7 +29,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0">
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.1">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
