--- a/src/AspNetCore.Jwt/AspNetCore.Jwt.csproj
+++ b/src/AspNetCore.Jwt/AspNetCore.Jwt.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>$(Version)</Version>
     <Authors>Saji Weerasingham</Authors>
     <Company>NA</Company>
     <Description>ASP.Net Core package to assist with JWT authentication/authorization for Web API when using Entity Framework Core Identity</Description>
